--- a/layouts/shortcodes/topics.html
+++ b/layouts/shortcodes/topics.html
@@ -1,4 +1,4 @@
-<div class="col-tile col-topics">
+<div class="col-tile col-topics col-flat">
     <div class="tile-title">{{- .Get "title" -}}</div>
     <div class="hotArticle">
         <ol>
