--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -1,18 +1,27 @@
-<ul class="breadcrumbs">
-  {{- template "breadcrumbnav" (dict "p1" . "p2" .) -}}
-</ul>
-{{- define "breadcrumbnav" -}}
-    {{- if .p1.Parent }}
-        {{- template "breadcrumbnav" (dict "p1" .p1.Parent "p2" .p2 ) -}}
-    {{- else if not .p1.IsHome -}}
-        {{- template "breadcrumbnav" (dict "p1" .p1.Site.Home "p2" .p2 ) -}}
-    {{- end -}}
+<nav class="breadcrumb" role="navigation" aria-label="bread crumb">
+    <ul class="breadcrumbs">
+    {{ template "breadcrumbnav" (dict "p1" . "p2" .) }}
+    </ul>
 
-<li>
-    {{ if eq .p1 .p2 }}
-        {{- partial "title" .p1 -}}
-    {{else}}
-      <a href="{{- .p1.Permalink -}}">{{- partial "title" .p1 -}}</a>
+    {{- define "breadcrumbnav" -}}    
+        {{- if .p1.Parent }}
+            {{- template "breadcrumbnav" (dict "p1" .p1.Parent "p2" .p2 ) -}}
+        {{- else if not .p1.IsHome -}}
+            {{- template "breadcrumbnav" (dict "p1" .p1.Site.Home "p2" .p2 ) -}}
+        {{- end -}}
+
+    <li>
+        {{- if eq .p1 .p2 -}}
+            {{- partial "title" .p1 -}}
+        {{- else -}}
+        <a href="{{- .p1.Permalink -}}">
+            {{- if and (.p1.IsHome) (or (eq .p1.Site.Params.product "Garoon") (eq .p1.Site.Params.product "Mailwise")) -}}
+                {{- i18n "Top_page" -}}
+            {{- else -}}
+                {{- partial "title" .p1 -}}
+            {{- end -}}
+        </a>
+        {{- end -}}
+    </li>
     {{ end }}
-</li>
-{{- end -}}
+</nav>
