--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,24 +1,41 @@
-<nav class="wrapper" aria-label="Header">
-    <div class="header-logo-base">
-  {{ with .Site.Params.logo }}
-        <a class="header-logo" href="{{ $.Site.BaseURL }}{{$.Lang}}/">
-            <img class="header-img" src="{{ $.Site.BaseURL }}{{ . }}">
-        </a>
-  {{ end }}
-    </div>
+    <header class="header">
+        <div class="wrapper">
+        {{- $langlen := len $.AllTranslations }}
+        {{- $baselang := "" }}
+        {{- if ne $langlen 0 }}
+            {{- $baselang = printf "%s/" $.Lang }}
+        {{- end }}
+            <a class="logo-link" href="{{ $.Site.BaseURL }}{{$baselang}}">
+                <div class="logo-wrap">
+                    {{- with .Site.Params.logo }}
+                    <div><img class="logo-img" src="{{ $.Site.BaseURL }}{{.}}" aria-hidden="true"></div>
+                    {{- end }}
+                    <div class="logo-product">{{ $.Scratch.Get "sitename"}}</div>
+                    <div class="logo-title">{{$.Site.Params.help}}</div>
+                </div>
+            </a>
 
-  {{if and (ne .Params.type "search_result") (ne .IsHome true)}}
-    <div class="search-wrap">
-      <form id="headerSearchBox_form" action="{{ "" | relURL }}{{.Lang}}/search_result.html" onsubmit='if(document.getElementById("headerSearchBox_input").value==""){return false;}'>
-          <div class="searchbox">
-              <input type="text" name="q" aria-label="search" id="headerSearchBox_input" class="search-input" placeholder="{{ i18n "Enter_keywords" }}">
-              <input type="submit" name="commit" value="" class="search-submit" data-disable-with="">
-              <input type="hidden" name="ct" value="{{ .Site.Language.Params.search_all }}">
-          </div>
-        </form>
-    </div>
-  {{end}}
-  {{if and .IsTranslated (eq .Site.Params.langSelector true) }}
-  <div id="langselector">{{ partial "langselector" . }}</div>
-  {{end}}
-</nav>
+        {{- $disp_sbox := true }}
+        {{- if eq .Params.type "search_result" }}
+            {{- $disp_sbox = false }}
+        {{- else if and (ne $.Site.Params.meganav true) .IsHome }}
+            {{- $disp_sbox = false }}
+        {{- end }}
+
+        {{- if eq $disp_sbox true }}
+            <div class="search-wrap">
+                <form id="headerSearchBox_form" action="{{ "" | relURL }}{{.Lang}}/search_result.html" onsubmit='if(document.getElementById("headerSearchBox_input").value==""){return false;}' role="search" >
+                    <div class="searchbox">
+                        <input type="text" name="q" id="headerSearchBox_input" class="search-input" placeholder='{{ i18n "Enter_keywords" }}' role="searchbox" >
+                        <button type="submit" name="commit" value="" class="search-submit" data-disable-with=""></button>
+                        <input type="hidden" name="ct" value="{{ .Site.Language.Params.search_all }}">
+                    </div>
+                </form>
+            </div>
+        {{- end }}
+
+        {{- if and .IsTranslated (eq .Site.Params.langSelector true) }}
+          {{ partial "langselector" . }}
+        {{- end}}
+        </div>
+    </header>
