--- a/layouts/partials/langselector.html
+++ b/layouts/partials/langselector.html
@@ -1,8 +1,14 @@
-<ul>
-    <li><div class="selectedlang"><i class="fas fa-globe"></i><span class="selectedlangtitle">{{- .Site.Language.Params.LanguageName }}</span><i class="fa fa-chevron-down" aria-hidden="true"></i></div></li>
-    <div class="otherlanguage">
-      {{- range .Translations -}}
-    <li><a class="langlink" rel="alternate" href="{{ .RelPermalink }}" hreflang="{{ .Lang }}" lang="{{ .Lang }}">{{ .Site.Language.Params.LanguageName }}</a></li>
-      {{- end -}}
+<div id="lang-selector" role="listbox" aria-label="language selector" aria-expanded="false" tabindex="0" >
+    <div class="current-lang">
+        <i class="fas fa-globe" aria-hidden="true"></i>
+        <span class="lang-title">{{ .Site.Language.Params.LanguageName }}</span>
+        <i class="fas fa-chevron-down" aria-hidden="true"></i>
     </div>
-</ul>
+    <div id="alter-lang" class="alter-lang" aria-hidden="true">
+        <ul>
+        {{- range .Translations }}
+            <li role="listitem"><a class="lang-link" href="{{ .RelPermalink }}"><span class="lang-title">{{ .Site.Language.Params.LanguageName }}</span></a></li>
+        {{- end }}
+        </ul>
+    </div>
+</div>
