--- a/layouts/shortcodes/reference.html
+++ b/layouts/shortcodes/reference.html
@@ -1,7 +1,9 @@
 {{- $_hugo_config := `{ "version": 1 }` -}}
 <aside class="admonition reference">
   <div class="admonition-alt">
-    <i class="fas fa-book fa-lg"></i>
+{{- if and (eq $.Site.Params.product "Garoon") (ne $.Site.Params.product "Mailwise") }}
+    <i class="fas fa-info-circle fa-fw" aria-hidden="true"></i>
+{{- end }}
     <span>{{ i18n "Title_references" }}</span>
   </div>
   <div class="admonition-content">{{ printf "%s" .Inner | markdownify }}</div>
