--- a/layouts/shortcodes/screen.html
+++ b/layouts/shortcodes/screen.html
@@ -1,1 +1,1 @@
-<img class="screenchot" src="{{.Get "src" }}" alt="{{ .Get "alt" }}" data-action="zoom">
+<img class="screenshot" src="{{.Get "src" }}" alt="{{ .Get "alt" }}" data-action="zoom">
