--- a/layouts/shortcodes/subnavi.html
+++ b/layouts/shortcodes/subnavi.html
@@ -3,7 +3,7 @@
     <div class="subnavimsg">{{ .Get "msg"}}</div>
     <div>
       <a href="{{ .Get "url" }}" target="_blank" class="btn-mail">
-      <i class="fa fa-envelope-o" aria-hidden="true"></i>
+      <i class="far fa-envelope" aria-hidden="true"></i>
         <h4>{{ .Get "inquiry"}}</h4>
       </a>
     </div>
