--- a/layouts/shortcodes/warning.html
+++ b/layouts/shortcodes/warning.html
@@ -1,7 +1,9 @@
 {{- $_hugo_config := `{ "version": 1 }` -}}
 <aside class="admonition warning">
   <div class="admonition-alt">
-    <i class="fas fa-exclamation-circle"></i>
+{{- if and (ne .Site.Params.product "Garoon") (ne .Site.Params.product "Mailwise") }}
+    <i class="fas fa-exclamation-circle" aria-hidden="true"></i>
+{{- end }}
     <span>{{ i18n "Title_caution" }}</span>
   </div>
   <div class="admonition-content">{{ printf "%s" .Inner | markdownify }}</div>
