--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -1,11 +1,77 @@
-.header .wrapper {
-  justify-content: space-between;
-}
 .main {
-  margin-top: 0;
-  position: relative;
-  top: -52px;
+    margin-top: 0;
+    position: relative;
+    top: -52px;
 }
+
+.header .wrapper {
+    justify-content: space-between;
+}
+
+.hero {
+    height: 60px;
+    display: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: 56px;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    background-position: left top;
+    text-align: center;
+    justify-content: center;
+}
+
+.welcome_message {
+    display: none;
+}
+
+.top-title {
+    margin: 0;
+    padding: 1.5em 0 1.5em 0;
+    text-align: center;
+    background: #015AAA;
+    color: #FFFFFF;
+    font-size: 2em;
+    font-weight: 400;
+    line-height: 1.3em;
+}
+
+.top-wrap {
+    display: flex;
+    flex-direction: column;
+}
+
+.first-row {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 20px 12px 80px 12px;
+    width: 100%;
+    height: auto;
+}
+
+.second-header {
+    width: 100%;
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.second-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 10px 0 160px 12px;
+    width: 100%;
+    height: auto;
+}
+
+/* article -------------------- */
 .article .wrapper {
     max-width: 100%;
     padding-top: 0;
@@ -19,52 +85,6 @@
     margin-left: 0;
 }
 
-.pagination .next {
-    display: none;
-}
-
-.hero {
-    height: 180px;
-    display: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    margin-top: 56px;
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    background-position: left top;
-    text-align: center;
-    justify-content: center;
-}
-.article .welcome_message {
-  text-align: center;
-  padding-top: 0;
-  font-weight: normal;
-}
-/*.hero-logo {
-    height: 44px;
-}
-*/
-/* Flexbox */
-/*.col-flex {
-  display: -webkit-box;
-  display: flex;
-  flex: 1;
-  flex-wrap: wrap;
-}*/
-.col-flex {
-  margin-top:72px;
-}
-.col-flex:after {
-  content: "";
-  clear: both;
-  display: block;
-}
-.col-flex > h2:first-child,.col-flex > h3:first-child {
-  padding-top: 0;
-  margin-top: 0;
-}
 .article .col-logo {
   display: block;
   width: 210px;
@@ -79,96 +99,6 @@
 }
 .article .col-logo > img {
   width: 100%;
-}
-.col-tile {
-  margin: 0 .8% 16px;
-  width: 31.7%;
-  padding: .9375rem;
-  height: 223px;
-  border: 1px solid #e6e6e6;
-  /*border-radius: 6px;*/
-  position: relative;
-  float: left;
-}
-.col-tile:not(.col-topics):hover,.article .col-logo:hover {
-    -webkit-transform: scale(1.015);
-    -moz-transform: scale(1.015);
-    -ms-transform: scale(1.015);
-    -o-transform: scale(1.015);
-    transform: scale(1.015);
-    background-color: #FFFFFF;
-    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
-}
-.col-tile > a {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border-bottom:none;
-  z-index: 2;
-  top: 0;
-  left: 0;
-}
-.col-tile .fa-chevron-right {
-  margin-left: 6px;
-  color: #333;
-}
-/*.tile-left {
-    position: relative;
-    width: 50%;
-    height:100%;
-    float: left;
-}*/
-
-.col-tile .tile-title {
-  font-size: 1.4rem;
-  line-height: 1.2;
-  position: relative;
-  z-index: 1;
-  margin-bottom: 12px;
-}
-
-.col-tile .tile-link {
-  /*position: absolute;*/
-  /*bottom: 20px;*/
-  margin-top: 45px;
-  z-index: 1;
-  width: 50%;
-  /*display: none;*/
-}
-
-/*.tile-right {
-    position: relative;
-    width: 50%;
-    height: 100%;
-    float: right;
-}*/
-
-.col-tile .tile-img {
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-  max-height: 140px;
-  margin-right: 6px;
-  margin-bottom: 6px;
-}
-.col-tile i {
-  position: absolute;
-  bottom: 18px;
-  right: 8%;
-  font-size: 105px;
-  color: #a1a1a1;
-}
-
-.fa-file-pdf-o {
-  color: #CB0606;
-  padding-right: .4em;
-}
-
-.col-topics {
-    height: 100%;
-    min-height: 223px;
-    padding-bottom: 9px;
 }
 .article h1,.article h2,.article h3,.article h4,.article h5,.article h6 {
   clear: both;
@@ -189,7 +119,150 @@
 .article .col-tile ol>li:before {
   content: none;
 }
+/* -------------------- end of article  */
 
+
+.col-flex {
+  margin-top:72px;
+}
+.col-flex:after {
+  content: "";
+  clear: both;
+  display: block;
+}
+.col-flex > h2:first-child,.col-flex > h3:first-child {
+  padding-top: 0;
+  margin-top: 0;
+}
+
+
+/* Tile -------------------- */
+.col-tile {
+  margin: 0 0 16px;
+  width: 100%;
+  padding: .9375rem;
+  height: 223px;
+  border: 1px solid #e6e6e6;
+  position: relative;
+  float: left;
+}
+.col-tile:not(.col-flat):hover {
+    transform: scale(1.015);
+    background-color: #FFFFFF;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
+}
+.col-tile > a {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-bottom:none;
+  z-index: 2;
+  top: 0;
+  left: 0;
+}
+.col-tile .fa-chevron-right {
+  margin-left: 6px;
+  color: #333;
+}
+.col-tile i {
+  position: absolute;
+  bottom: 18px;
+  right: 8%;
+  font-size: 105px;
+  color: #a1a1a1;
+}
+
+.col-topics {
+    height: 100%;
+    min-height: 223px;
+    padding-bottom: 9px;
+}
+
+.tile-title {
+  font-size: 1.4rem;
+  line-height: 1.2;
+  position: relative;
+  z-index: 1;
+  margin-bottom: 12px;
+}
+.tile-link {
+  margin-top: 45px;
+  z-index: 1;
+  width: 50%;
+}
+.tile-img {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  max-height: 140px;
+  margin-right: 6px;
+  margin-bottom: 6px;
+}
+.tile-icon{
+    padding-top: 1em;
+}
+.tile-text {
+    text-align: left;
+    padding: .8em;
+}
+.tile-text li {
+    list-style-type: none;
+}
+.tile-text li:before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    font-size: 1em;
+    content: "\f0a9";
+    text-align: center;
+    padding-right: .5em;
+    color: #1b72cd;
+}
+/* -------------------- End of Tile */
+
+
+/* Garoon type Tile  -------------------- */
+.col-tile-gr {
+    text-align: center;
+    width: 100%;
+    height: 270px;
+    padding: 0;
+}
+.col-tile-gr a {
+    color: #000;
+}
+.col-tile-gr a:hover {
+    text-decoration: none;
+}
+.col-tile-gr i {
+    position: static;
+    font-size: 6em;
+    color: #1b72cd;
+}
+.col-tile-gr i.nolink {
+    color: #000;
+}
+.col-tile-gr2 {
+    width: 100%;
+    height: 430px;
+    padding: 0;
+}
+.col-tile-gr2 a {
+    color: #1b72cd;
+}
+.col-tile-gr2 li a:hover {
+  text-decoration: underline;
+}
+i.index-pdf {
+  color: #c50102;
+  margin-left: 5px;
+  font-size:1.25em;
+}
+
+/* -------------------- End of Garoon type Tile */
+
+
+/* Hot article -------------------- */
 .hotArticle {
   color: #0d89a2;
   padding: .1em 1px;
@@ -206,11 +279,9 @@
   top: 0;
 }
 #hotArticles-showMore {
-  /*padding: 2px;*/
   text-align: center;
   cursor: pointer;
   color: #139cb7;
-  /*margin-top: 14px;*/
 }
 #hotArticles-showMore:hover {
   background: #ECEAF7;
@@ -222,48 +293,87 @@
 #hotArticles-showMore.expand{
     transform: rotate(180deg);
 }
+/* -------------------- End of Hot article */
+
 
 .article .fa-search {
   margin-left: 12px;
   font-size: 1.5rem;
 }
-#headerSearchBox_input {
-  font-size: 1.2rem;
+
+
+/* 768px以上の設定  **************************************************************/
+@media only screen and (min-width:768px){
+    .welcome_message {
+        display: block;
+        text-align: center;
+        padding-top: 0;
+        font-weight: normal;
+        font-size: 2.4rem;
+        line-height: 1.2em;
+        margin-bottom: 30px;
+    }
+
+    .top-title {
+        padding: 1.2em 0 1.2em 0;
+        font-size: 2.5em;
+    }
+
+    .first-row {
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-around;
+
+    }
+    .second-row {
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .col-tile {
+        width: 46.8%;
+        margin: 0 1.6% 16px;
+    }
+    .col-tile-gr {
+        width: 250px;
+        height: 350px;
+        margin: 10px 0 10px 0;
+    }
+    .col-tile-gr2 {
+        width: 300px;
+        height: 430px;
+        margin: 10px 0 10px 0;
+    }
+
+    .tile-title {
+        font-size: calc(1.1rem + ((1vw - 0.3rem) * 2.5444));
+    }
 }
 
-@media (min-width: 1100px) {
-  .tile-title {
-     font-size:1.55rem;
-   }
- }
-@media only screen and (max-width:1100px) {
-  .col-tile {
-    width: 46.8%;
-    margin: 0 1.6% 16px;
-  }
+/* 1059px以上の設定  *************************************************************/
+@media only screen and (min-width:1059px) {
+    .hero {
+      height: 180px;
+    }
+
+    .tile-title {
+         font-size:1.55rem;
+     }
+
+    .col-tile {
+        width: 31.7%;
+        margin: 0 .8% 16px;
+    }
+    .col-tile-gr {
+        width: 18%;
+    }
+    .col-tile-gr2 {
+        width: 23%;
+    }
+
+    .main {
+      top: 0;
+    }
 }
-@media (min-width: 599px) and (max-width: 1099px){
-  .tile-title {
-    font-size: calc(1.1rem + ((1vw - 0.3rem) * 2.5444));
-  }
-}
-@media only screen and (max-width:1000px) {
-  .hero {
-    height: 90px;
-  }
-  .welcome_message {
-    display: none;
-  }
-  .main {
-    top: 0;
-  }
-}
-@media only screen and (max-width:650px) {
-  .col-tile {
-    margin: 0 0 16px;
-    width: 100%;
-  }
-  .hero {
-    height: 60px;
-  }
-}
+
