--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -24,7 +24,7 @@
   font-weight: 400;
   font-style: normal;
 }
-.font-en .article table th, .font-en .article .admonition .admonition-alt, .font-en .article h1,.font-en .article h2, .font-en .article h5, .font-en .article h6, .font-en .article ol>li:before, .font-en .article caption, .font-en #mainmenu a.expand, .font-en #mainmenu li a.current {
+.font-en .article table th, .font-en .article .admonition .admonition-alt, .font-en .article h1,.font-en .article h2, .font-en .article h5, .font-en .article h6, .font-en .article ol>li:before, .font-en .article caption, .font-en #mainmenu a.expand, .font-en #mainmenu li a.current, .font-en .welcome_message {
   font-family: proximasoft-bold;
 }
 
@@ -32,6 +32,17 @@
 /* change color of the boundary lines between header and body and footer. */
 .header::before {
   content: none;
+}
+.logo-img {
+  width: 170px;
+  height: 56px;
+  padding: 15px 9px 7px 9px;
+}
+.logo-product {
+  display: none;
+}
+.logo-title {
+  display: none;
 }
 .footer::before {
   background-image: none;
