--- a/layouts/shortcodes/hint.html
+++ b/layouts/shortcodes/hint.html
@@ -2,7 +2,7 @@
 <aside class="admonition hint">
   <div class="admonition-alt">
 {{- if and (ne .Site.Params.product "Garoon") (ne .Site.Params.product "Mailwise") }}
-    <i class="fab fa-medapps" aria-hidden="true"></i>
+    <i class="fas fa-lightbulb" aria-hidden="true"></i>
 {{- end }}
     <span class="admonition-alt-text">{{ i18n "Title_tips" }}</span>
   </div>
