--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
         <div class="hero" style="background-image: url('{{ "images/hero_common.png" | relURL}}');"></div>
     </div>
     <main class="main">
-        <article class="article" >
+        <article class="article home-article" >
             <div class="wrapper">
                 <div class="welcome_message">{{ i18n "Welcome" . }}</div>
                 <div class="search-wrap">
