--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -743,7 +743,7 @@ ul.breadcrumbs {
     margin-top: -24px;
     padding-top: 66px;
 }
-.article h3 
+.article h3 {
     font-size: 1.6rem;
     line-height: 1.2em;
     margin-bottom: 15px;
