リンクがクリックできない問題に対応

--- a/static/stylesheets/custom_gr.css
+++ b/static/stylesheets/custom_gr.css
@@ -201,6 +201,7 @@ td a > .fa:hover{
 .article .h6-anc{
     padding-top:65px;
     margin-top:-65px;
+    z-index: -100;
 }
 .article a {
     color: #1b72cd;
