サブナビの挙動の修正とCSSを修正

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -612,7 +612,7 @@ ul.breadcrumbs {
 
 .tree-title, .tree-subtitle {
     font-weight: normal;
-    height: 60px;
+    min-height: 60px;
     padding-top: 1em;
     padding-left: 3px;
 }
