--- a/layouts/partials/treenav.html
+++ b/layouts/partials/treenav.html
@@ -7,9 +7,9 @@
 {{- if eq $.Site.Params.meganav true -}}
     {{- $lastpage := (slice) }}
     {{- if eq $.Site.Params.product "Garoon" }}
-        {{- $lastpage = (slice "/purpose/" "/user/basic/" "/user/mobile/" "/user/personal/" "/admin/spec/io.html" "/admin/spec/timezone.html") }}
+        {{- $lastpage = (slice "/purpose/" "/user/basic/" "/user/mobile/" "/user/personal/" "/admin/spec/") }}
     {{- else if eq $.Site.Params.product "Mailwise" }}
-        {{- $lastpage = (slice "/user/basic/" "/user/personal/" "/admin/spec/limit.html") }}
+        {{- $lastpage = (slice "/user/basic/" "/user/personal/" "/admin/spec/" "/admin/system/") }}
     {{- end }}
     {{- range $lastpage }}
         {{- if in $.RelPermalink . }}
